...
    block: BlockModel,
    modifier: Modifier = Modifier,
) {
    Column(
        modifier = modifier
            .widgetSheetContent()
            .testTag("blocks_edit_screen")
    ) {
        SheetTopBar(
            titleText = stringResource(R.string.widgets__blocks__name),
            onBack = onBack,
        )

...
