...
                        .weight(1f)
                        .testTag("time_text")
                )

                IconButton(
                    onClick = onClickTime,
                    modifier = Modifier.testTag("time_toggle_button")
                ) {
                    Icon(
                        painter = painterResource(R.drawable.ic_checkmark),
                        contentDescription = null,
                        tint = if (headlinePreferences.showTime) Colors.Brand else Colors.Gray3,
                        modifier = Modifier
...
